# qgis_osgearth_cmake

qgis3_osgearth2_osgqt-4_cmake_demo/: CMakeLists.txt  GraphicsWindowQt.cpp  main.cpp  readme.md
qgis3_osgearth2_osgqt-4_cmake_demo/CMakeModules/: FindOsgEarth.cmake  FindQGIS.cmake
qgis3_osgearth3_osgqt-4_cmake_demo/: .gitignore  CMakeLists.txt  GraphicsWindowQt.h  main.cpp  qgisosg.cpp  qgisosg.h
qgis3_osgearth3_osgqt-4_cmake_demo/CMakeModules/: FindOsgEarth.cmake
qgis3_osgearth3_osgqt-master_cmake_demo/: .gitignore  CMakeLists.txt  main.cpp  readme.md  start_db.sh
qgis3_osgearth3_osgqt-master_cmake_demo/CMakeModules/: FindOSG.cmake
qgis3_osgearth3_osgqt-master_cmake_demo/MultiLayerTileMap/: BulletManager.cpp  BulletManager.h  GroundVehicle.cpp  GroundVehicle.h  HciCoordinate.cpp  HciCoordinate.h  MapLayerManager.cpp  MapLayerManager.h  OGRManager.cpp  OGRManager.h  TriangleMeshVisitor.cpp  TriangleMeshVisitor.h
qgis3_osgearth3_osgqt-master_cmake_demo/data/: simple.earth
qgis3_osgearth3_osgqt-master_cmake_demo/osgQOpenGL/: Export.h  OSGRenderer.cpp  OSGRenderer.h  osgQOpenGLWidget.cpp  osgQOpenGLWidget.h  osgQOpenGLWindow.cpp  osgQOpenGLWindow.h
qgis3_osgearth3_osgqt-master_cmake_demo/tests/: CMakeLists.txt  TestBullet.cpp  TestGroundVehicle.cpp  TestMapLayerManager.cpp  TestPrecipitationEffect.cpp  TestVehicleBullet.cpp  demo06.cpp  main.cpp  testOsgGL3.cpp  testOsgGL3InDrawBack.cpp  testOsgGLES3.cpp
